--- a/pages/index.scss
+++ b/pages/index.scss
@@ -220,3 +220,9 @@
 @import '../Common.blocks/LikeButton/-Label/_active/LikeButton-Label_active';
 @import '../Common.blocks/LikeButton/-GradientBorder/LikeButton-GradientBorder';
 @import '../Common.blocks/LikeButton/-GradientBorder/_active/LikeButton-GradientBorder_active';
+@import '../Common.blocks/Wrapper/-RateButton/Wrapper-RateButton';
+@import '../Common.blocks/RateButton/-Star/RateButton-Star';
+@import '../Common.blocks/RateButton/-StarIcon/RateButton-StarIcon';
+@import '../Common.blocks/RateButton/-StarIcon/_active/RateButton-StarIcon_active';
+@import '../Common.blocks/RateButton/-Star/_active/RateButton-Star_active';
+@import '../Common.blocks/RateButton/-InputHidden/RateButton-InputHidden';
