--- a/Common.blocks/RateButton/-Star/RateButton-Star.scss
+++ b/Common.blocks/RateButton/-Star/RateButton-Star.scss
@@ -1,44 +1,51 @@
 @media only screen and (max-width: 576px) {
-  .RateButton {
+  .RateButton-Star {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .RateButton {
+  .RateButton-Star {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .RateButton {
+  .RateButton-Star {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .RateButton {
+  .RateButton-Star {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .RateButton {
+  .RateButton-Star {
     display: flex;
-    flex-direction: row;
-    padding: 0;
-    margin: 0;
+    align-items: center;
+    text-align: center;
+    -webkit-text-fill-color: transparent;
+    /* Primary Gradient */
+    background: $DatepickerGradient;
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    background-clip: text;
+    -webkit-background-clip: text;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .RateButton {
+  .RateButton-Star {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .RateButton {
+  .RateButton-Star {
 
   }
 }
