--- a/Common.blocks/RateButton/RateButton.pug
+++ b/Common.blocks/RateButton/RateButton.pug
@@ -1,4 +1,4 @@
 mixin RateButton(content)
-    div.RateButton&attributes(attributes) #{content}
+    ul.RateButton&attributes(attributes) #{content}
         if block
             block
