--- a/Common.blocks/Wrapper/-RateButton/Wrapper-RateButton.scss
+++ b/Common.blocks/Wrapper/-RateButton/Wrapper-RateButton.scss
@@ -1,44 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .RateButton {
+  .Wrapper-RateButton {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .RateButton {
+  .Wrapper-RateButton {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .RateButton {
+  .Wrapper-RateButton {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .RateButton {
+  .Wrapper-RateButton {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .RateButton {
-    display: flex;
-    flex-direction: row;
-    padding: 0;
-    margin: 0;
+  .Wrapper-RateButton {
+    margin-bottom: 193px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .RateButton {
+  .Wrapper-RateButton {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .RateButton {
+  .Wrapper-RateButton {
 
   }
 }
