fix like button added, passes the value on the input tag

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -436,13 +436,13 @@ html
                                             +LikeButton()
                                                 +LikeButton-GradientBorder()
                                                     +LikeButton-Label()
-                                                        +LikeButton-Button(type="hidden")
+                                                        +LikeButton-Button(type="hidden" name="likes")
                                                         +LikeButton-Icon() favorite_border
                                                         +LikeButton-NumberLikes() 2
                                         +LikeButton()
                                             +LikeButton-GradientBorder.LikeButton-GradientBorder_active()
                                                 +LikeButton-Label()
-                                                    +LikeButton-Button(type="hidden")
+                                                    +LikeButton-Button(type="hidden" name="likes")
                                                     +LikeButton-Icon.LikeButton-Icon_active() favorite
                                                     +LikeButton-NumberLikes.LikeButton-NumberLikes_active() 12
                                 +Wrapper-RateButton()
