--- a/pages/index.scss
+++ b/pages/index.scss
@@ -226,3 +226,5 @@
 @import '../Common.blocks/RateButton/-StarIcon/_active/RateButton-StarIcon_active';
 @import '../Common.blocks/RateButton/-Star/_active/RateButton-Star_active';
 @import '../Common.blocks/RateButton/-InputHidden/RateButton-InputHidden';
+@import '../Common.blocks/Wrapper/-RateButtonWrapper/Wrapper-RateButtonWrapper';
+@import '../Common.blocks/Wrapper/-RateButtonSeparator/Wrapper-RateButtonSeparator';
