Added Rich Checkbox Buttons

--- a/Common.blocks/DescriptionForButtonsAndInputs/DescriptionForButtonsAndInputs.pug
+++ b/Common.blocks/DescriptionForButtonsAndInputs/DescriptionForButtonsAndInputs.pug
@@ -1,4 +1,4 @@
 mixin DescriptionForButtonsAndInputs(content)
-    span.DescriptionForButtonsAndInputs&attributes(attributes) #{content}
+    p.DescriptionForButtonsAndInputs&attributes(attributes) #{content}
         if block
             block
