--- a/Common.blocks/TitleForButtonsAndInputs/TitleForButtonsAndInputs.pug
+++ b/Common.blocks/TitleForButtonsAndInputs/TitleForButtonsAndInputs.pug
@@ -1,4 +1,4 @@
 mixin TitleForButtonsAndInputs(content)
-    div.TitleForButtonsAndInputs&attributes(attributes) #{content}
+    h5.TitleForButtonsAndInputs&attributes(attributes) #{content}
         if block
             block
