--- a/Common.blocks/Wrapper/-Footer/Wrapper-Footer.scss
+++ b/Common.blocks/Wrapper/-Footer/Wrapper-Footer.scss
@@ -1,48 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .DescriptionForButtonsAndInputs {
+  .Wrapper-Footer {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .DescriptionForButtonsAndInputs {
+  .Wrapper-Footer {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .DescriptionForButtonsAndInputs {
+  .Wrapper-Footer {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .DescriptionForButtonsAndInputs {
+  .Wrapper-Footer {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .DescriptionForButtonsAndInputs {
-    font-family: Montserrat-Regular;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 18px;
-    /* Dark 50% */
-    color: $DarkShade50;
-    margin: 0;
+  .Wrapper-Footer {
+    margin-top: 277px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .DescriptionForButtonsAndInputs {
+  .Wrapper-Footer {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .DescriptionForButtonsAndInputs {
+  .Wrapper-Footer {
 
   }
 }
