--- a/pages/index.scss
+++ b/pages/index.scss
@@ -228,3 +228,11 @@
 @import '../Common.blocks/RateButton/-InputHidden/RateButton-InputHidden';
 @import '../Common.blocks/Wrapper/-RateButtonWrapper/Wrapper-RateButtonWrapper';
 @import '../Common.blocks/Wrapper/-RateButtonSeparator/Wrapper-RateButtonSeparator';
+@import '../Common.blocks/Wrapper/-SecondDropdownGuests/Wrapper-SecondDropdownGuests';
+@import '../Common.blocks/RichCheckboxButtons/-Header/RichCheckboxButtons-Header';
+@import '../Common.blocks/RichCheckboxButtons/-List/RichCheckboxButtons-List';
+@import '../Common.blocks/Wrapper/-Footer/Wrapper-Footer';
+@import '../Common.blocks/RichCheckboxButtons/-Item/RichCheckboxButtons-Item';
+
+@import '../Common.blocks/RichCheckboxButtons/-Title/RichCheckboxButtons-Title';
+@import '../Common.blocks/RichCheckboxButtons/-Description/RichCheckboxButtons-Description';
