--- a/Common.blocks/RichCheckboxButtons/-Description/RichCheckboxButtons-Description.scss
+++ b/Common.blocks/RichCheckboxButtons/-Description/RichCheckboxButtons-Description.scss
@@ -1,48 +1,49 @@
 @media only screen and (max-width: 576px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Description {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Description {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Description {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Description {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Description {
+    margin: 0;
+    padding: 0;
     font-family: Montserrat-Regular;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 18px;
-    /* Dark 50% */
+    font-size: 12px;
+    line-height: 14px;
     color: $DarkShade50;
-    margin: 0;
+    padding-right: 1px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Description {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Description {
 
   }
 }
