--- a/Common.blocks/RichCheckboxButtons/-Header/RichCheckboxButtons-Header.scss
+++ b/Common.blocks/RichCheckboxButtons/-Header/RichCheckboxButtons-Header.scss
@@ -1,48 +1,44 @@
 @media only screen and (max-width: 576px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Header {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Header {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Header {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Header {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .DescriptionForButtonsAndInputs {
-    font-family: Montserrat-Regular;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 18px;
-    /* Dark 50% */
-    color: $DarkShade50;
-    margin: 0;
+  .RichCheckboxButtons-Header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 266px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Header {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-Header {
 
   }
 }
