--- a/Common.blocks/RichCheckboxButtons/-List/RichCheckboxButtons-List.scss
+++ b/Common.blocks/RichCheckboxButtons/-List/RichCheckboxButtons-List.scss
@@ -1,48 +1,43 @@
 @media only screen and (max-width: 576px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-List {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-List {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-List {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-List {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .DescriptionForButtonsAndInputs {
-    font-family: Montserrat-Regular;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 18px;
-    /* Dark 50% */
-    color: $DarkShade50;
+  .RichCheckboxButtons-List {
+    padding: 0;
     margin: 0;
+    display: none;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-List {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .DescriptionForButtonsAndInputs {
+  .RichCheckboxButtons-List {
 
   }
 }
