--- a/pages/index.scss
+++ b/pages/index.scss
@@ -236,3 +236,8 @@
 
 @import '../Common.blocks/RichCheckboxButtons/-Title/RichCheckboxButtons-Title';
 @import '../Common.blocks/RichCheckboxButtons/-Description/RichCheckboxButtons-Description';
+@import '../Common.blocks/Wrapper/-RangeSlider/Wrapper-RangeSlider';
+@import '../Common.blocks/RangeSlider/-Slider/RangeSlider-Slider';
+@import '../Common.blocks/RangeSlider/-Range/RangeSlider-Range';
+@import '../Common.blocks/RangeSlider/-Title/RangeSlider-Title';
+@import '../Common.blocks/RangeSlider/-Wrapper/RangeSlider-Wrapper';
