--- a/Common.blocks/RangeSlider/RangeSlider.pug
+++ b/Common.blocks/RangeSlider/RangeSlider.pug
@@ -1,4 +1,4 @@
 mixin RangeSlider(content)
-    div.RangeSlider&attributes(attributes) #{content}
+    form.RangeSlider&attributes(attributes) #{content}
         if block
             block
