--- a/Common.blocks/Button/-Btn/_active/Button-Btn_active.scss
+++ b/Common.blocks/Button/-Btn/_active/Button-Btn_active.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .Button {
+  .Button-Btn_active {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Button {
+  .Button-Btn_active {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Button {
+  .Button-Btn_active {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Button {
+  .Button-Btn_active {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Button {
-    border-radius: 22px;
+  .Button-Btn_active {
+    background: $DatepickerGradientOpacity;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Button {
+  .Button-Btn_active {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Button {
+  .Button-Btn_active {
 
   }
 }
