--- a/Common.blocks/PayButton/PayButton.pug
+++ b/Common.blocks/PayButton/PayButton.pug
@@ -1,4 +1,4 @@
 mixin PayButton(content)
-    div.PayButton&attributes(attributes) #{content}
+    button.PayButton&attributes(attributes) #{content}
         if block
             block
