--- a/pages/index.scss
+++ b/pages/index.scss
@@ -241,3 +241,23 @@
 @import '../Common.blocks/RangeSlider/-Range/RangeSlider-Range';
 @import '../Common.blocks/RangeSlider/-Title/RangeSlider-Title';
 @import '../Common.blocks/RangeSlider/-Wrapper/RangeSlider-Wrapper';
+@import '../Common.blocks/Wrapper/-Buttons/Wrapper-Buttons';
+@import '../Common.blocks/Button/-Content/Button-Content';
+@import '../Common.blocks/Button/-Btn/Button-Btn';
+@import '../Common.blocks/Button/-Btn/_ghostBtn/Button-Btn_ghostBtn';
+@import '../Common.blocks/Button/-Content/_ghostBtn/Button-Content_ghostBtn';
+@import '../Common.blocks/Button/_borderNone/Button_borderNone';
+@import '../Common.blocks/Button/-GhostBtn/Button-GhostBtn';
+@import '../Common.blocks/Button/-Content/_gradientBorder/Button-Content_gradientBorder';
+@import '../Common.blocks/Button/_gradientBorder/Button_gradientBorder';
+@import '../Common.blocks/Button/-GhostBtn/_active/Button-GhostBtn_active';
+@import '../Common.blocks/Button/_active/Button_active';
+@import '../Common.blocks/Button/-Btn/_active/Button-Btn_active';
+@import '../Common.blocks/GradientButton/GradientButton';
+@import '../Common.blocks/GradientButton/-Btn/GradientButton-Btn';
+@import '../Common.blocks/Button/-Content/_active/Button-Content_active';
+@import '../Common.blocks/ButtonsBlock/-WrapperForLeftButton/ButtonsBlock-WrapperForLeftButton';
+@import '../Common.blocks/PayButton/-Content/PayButton-Content';
+@import '../Common.blocks/PayButton/-Text/PayButton-Text';
+@import '../Common.blocks/PayButton/-Arrow/PayButton-Arrow';
+@import '../Common.blocks/PayButton/-Content/_active/PayButton-Content_active';
