--- a/Common.blocks/Button/-Content/Button-Content.scss
+++ b/Common.blocks/Button/-Content/Button-Content.scss
@@ -1,41 +1,46 @@
 @media only screen and (max-width: 576px) {
-  .Button {
+  .Button-Content {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Button {
+  .Button-Content {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Button {
+  .Button-Content {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Button {
+  .Button-Content {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Button {
+  .Button-Content {
+    background: $DatepickerGradient;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
     border-radius: 22px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Button {
+  .Button-Content {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Button {
+  .Button-Content {
 
   }
 }
