--- a/Common.blocks/Button/-GhostBtn/Button-GhostBtn.scss
+++ b/Common.blocks/Button/-GhostBtn/Button-GhostBtn.scss
@@ -1,46 +1,57 @@
 @media only screen and (max-width: 576px) {
-  .PayButton {
+  .Button-GhostBtn {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .PayButton {
+  .Button-GhostBtn {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .PayButton {
+  .Button-GhostBtn {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .PayButton {
+  .Button-GhostBtn {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .PayButton {
+  .Button-GhostBtn {
+    font-family: Montserrat-bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    background: $DatepickerGradient;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     border: none;
     outline: none;
     padding: 0;
     margin: 0;
     cursor: pointer;
-    border-radius: 22px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .PayButton {
+  .Button-GhostBtn {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .PayButton {
+  .Button-GhostBtn {
 
   }
 }
