--- a/Common.blocks/Button/-GhostBtn/_active/Button-GhostBtn_active.scss
+++ b/Common.blocks/Button/-GhostBtn/_active/Button-GhostBtn_active.scss
@@ -1,41 +1,46 @@
 @media only screen and (max-width: 576px) {
-  .Button {
+  .Button-GhostBtn_active {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Button {
+  .Button-GhostBtn_active {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Button {
+  .Button-GhostBtn_active {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Button {
+  .Button-GhostBtn_active {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Button {
-    border-radius: 22px;
+  .Button-GhostBtn_active {
+    color: $DarkShade50;
+    background: $background;
+    -webkit-background-clip: border-box;
+    -moz-background-clip: border-box;
+    background-clip: border-box;
+    -webkit-text-fill-color: currentColor;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Button {
+  .Button-GhostBtn_active {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Button {
+  .Button-GhostBtn_active {
 
   }
 }
