--- a/Common.blocks/ButtonsBlock/-WrapperForSamples/ButtonsBlock-WrapperForSamples.scss
+++ b/Common.blocks/ButtonsBlock/-WrapperForSamples/ButtonsBlock-WrapperForSamples.scss
@@ -24,7 +24,12 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .ButtonsBlock-WrapperForSamples {
-
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 29px;
+    &:nth-child(3) {
+      margin-bottom: 33px;
+    }
   }
 }
 
