--- a/Common.blocks/GradientButton/GradientButton.scss
+++ b/Common.blocks/GradientButton/GradientButton.scss
@@ -1,41 +1,48 @@
 @media only screen and (max-width: 576px) {
-  .Button {
+  .GradientButton {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Button {
+  .GradientButton {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Button {
+  .GradientButton {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Button {
+  .GradientButton {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Button {
+  .GradientButton {
+    background: $background;
     border-radius: 22px;
+    height: 40px;
+    margin: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Button {
+  .GradientButton {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Button {
+  .GradientButton {
 
   }
 }
