--- a/Common.blocks/PayButton/-Text/PayButton-Text.scss
+++ b/Common.blocks/PayButton/-Text/PayButton-Text.scss
@@ -1,41 +1,47 @@
 @media only screen and (max-width: 576px) {
-  .Button {
+  .PayButton-Text {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Button {
+  .PayButton-Text {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Button {
+  .PayButton-Text {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Button {
+  .PayButton-Text {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Button {
-    border-radius: 22px;
+  .PayButton-Text {
+    font-family: Montserrat-bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-align: center;
+    text-transform: uppercase;
+    color: $background;
+
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Button {
+  .PayButton-Text {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Button {
+  .PayButton-Text {
 
   }
 }
