--- a/Common.blocks/Wrapper/-RangeSlider/Wrapper-RangeSlider.scss
+++ b/Common.blocks/Wrapper/-RangeSlider/Wrapper-RangeSlider.scss
@@ -24,7 +24,7 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .Wrapper-RangeSlider {
-
+    margin-bottom: 45px;
   }
 }
 
